# Better_cursor

./: README.md
client/: .gitignore  package-lock.json  package.json
client/src/: App.tsx  index.css
client/src/components/editor/: Breadcrumbs.tsx  CodeEditor.tsx  EditorTabs.tsx  TerminalPanel.tsx
client/src/components/layout/: ExplorerPanel.tsx  PrimarySidebar.tsx  StatusBar.tsx  TopAppBar.tsx
server/: .gitignore  pyproject.toml
server/src/mini_cursor/: main.py
